Add Change Password page

--- a/changepassword.html
+++ b/changepassword.html
@@ -1,7 +1,7 @@
 <html lang="english" dir="ltr" data-style="basic">
 <!--
    vPanel Demo
-   (c) 2022-Present Wybe Network, np rights reserved. The idea and text is from SmallHost, at smallhost.us.to.
+   (c) 2022-Present Wybe Network, no rights reserved. The idea and text is from SmallHost, at smallhost.us.to.
    This is a demo version of vPanel for MOFH-based providers.
    You are free to use this code with changes that will be explained later. 
    Providing/retaining credit to Wybe and SmallHost is recommended, but not required.
@@ -357,7 +357,6 @@
    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
    <script type="text/javascript" src="elements/bootstrap.min.js"></script>
 </head>
-
 <body id="cpanel_body" class="yui-skin-sam">
    <div id="wrap">
       <header id="masterAppContainer" ng-controller="applicationListController" class="ng-scope">
@@ -423,33 +422,75 @@
          <a id="lnkMenu" href="./" title="" class="active" data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
          </a>
-         <a id="26244546358179969" href="upgrade.html"
+         <a id="26244546358179969" href="upgrade.html" data-placement="right"
             data-original-title="Upgrade Plans">
             <img width="28px" height="28px" src="elements/pl-sidebar-upgrade.png">
          </a>
          <br><br>
          <div style="position: float;left:100px; vertical-align:middle;"></div>
       </aside>
-   <div id="content" class="container-fluid">
+  <div id="content" class="container-fluid">
             <h1 class="page-header">
-            <span id="icon-createticket" class="page-icon icon-createticket"></span>
-            <span id="pageHeading">Create a Support Ticket</span>
+            <span id="icon-change_password" class="page-icon icon-change_password"></span>
+            <span id="pageHeading">Password &amp; Security</span>
         </h1>
-<div class="body-content">
-<iframe class="transition2" src="modules/ticket/askquestion.html" style="border:0px #FFFFFF none;" name="questionxx" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="4200px" width="700px"></iframe><br>
+    <div class="content">
+        <h1>Change Password</h1>
+        <p class="description">
+        Please choose a unique password that you will use only for your hosting account with our services.<br>This change will be applied to the control panel, FTP account, e-mail account and MySQL accounts. Please remember to close all windows and logout after changing your password.</p><div class="content">
+        <p>Change all account passwords using the below form, it will take 10~15 minutes to take full effect after logout.</p>
+    </div>
+<p></p>
+<form>
+  <table style="text-align: left; width: 600px; height: 100px;" border="0" cellpadding="0" cellspacing="2">
+    <tbody>
+      <tr>
+        <td style="width: 165px;"><p>New Password:</p></td>
+        <td style="width: 9px;"></td>
+        <td style="width: 509px;"><input class="form-control" size="30" type="password"></td>
+      </tr>
+      <tr>
+        <td style="width: 165px;"><p>Confirm New Password:</p></td>
+        <td style="width: 9px;"></td>
+        <td style="width: 509px;"><input size="30" class="form-control" type="password"></td>
+      </tr>
+       <tr>
+      <td><br><input class="btn btn-primary" value="  Change Password  " type="button" href="#" data-toggle="modal" data-target="#demo"></td>
+      </tr>
+      <tr>
+        <td><br></td>
+        </tr>
+    </tbody>
+  </table>
+</form>
+<h2>Protect yourself by:</h2>
+    <ul>
+        <li>Remembering your password, never write it down!</li>
+        <li>Never sharing your password!</li>
+    <li>
+    </li>
+    <li>If you need assistance, verify::
+    <ul>
+    <li>You only provide it to support personnel</li>
+    <li>You use secure support channels like the ticket system</li>
+    </ul>
+    </li>
+    <li>Change your password monthly</li>
+    <li></li>
+    </ul>
+    <h2>Avoid words found in a dictionary:</h2>
+    <ul>
+    <li>Use a mix of numbers, letters and capitalization</li>
+    <li>Use at least seven (7) or more characters</li>
+    </ul>
 </div>
-<br>
-</div>
-</div>
-
-
 <footer>
     <!-- UI INCLUDES GLOBAL FOOTER -->
     <!-- UI INCLUDES GLOBAL FOOTER END -->
     <div class="container-fluid">
        <br>
        <!--Add your themes and scripts BELOW this line. No theme is currently active, and Responsive Domain Search is enabled.-->
-       
+
        <script src="https://vpc.cdn.wybenetwork.com/responsive-domain-search/responsive-domain-search.js"
           type="text/javascript"></script>
        <!--Add your themes and scripts ABOVE this line. No theme is currently active, and Responsive Domain Search is enabled.-->
@@ -460,7 +501,8 @@
                 <img id="imgPoweredByCpanel" src="elements/powered_by_cpanel.png" alt="cPanel, Inc."
                    style="display:inline-block; z-index:2147483647; visibility:visible;">
              </a>
-             <sub id="txtCpanelVersion" style="display:inline-block; z-index:2147483647; visibility:visible;"></sub>
+             <sub id="txtCpanelVersion"
+                style="display:inline-block; z-index:2147483647; visibility:visible;"></sub>
           </div>
        </div>
     </div>
@@ -481,6 +523,6 @@
           </div>
        </div>
     </div>
- </footer>
+</footer>
 </body>
 </html>
