--- a/formatted.index.html
+++ b/formatted.index.html
@@ -388,7 +388,7 @@
                      </button>
                      <ul class="dropdown-menu dropdown-menu-right">
                         <li>
-                           <a id="lnkUserPrefChangePwd" href="#" data-toggle="modal" data-target="#demo">Change
+                           <a id="lnkUserPrefChangePwd" href="changepassword.html">Change
                               Password</a>
                         </li>
                         <li>
@@ -501,11 +501,9 @@
                            <!-- ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-change_password"
-                                 class="itemImageWrapper integrations_icon spriteicon_img icon-change_password" href="#"
-                                 data-toggle="modal" data-target="#demo" target="">
+                                 class="itemImageWrapper integrations_icon spriteicon_img icon-change_password" href="changepassword.html">
                               </a>
-                              <a id="item_change_password" class="itemTextWrapper link" href="#" data-toggle="modal"
-                                 data-target="#demo" target="">Change Password</a>
+                              <a id="item_change_password" class="itemTextWrapper link" href="changepassword.html">Change Password</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
