--- a/accountstatistics.html
+++ b/accountstatistics.html
@@ -388,7 +388,7 @@
                      </button>
                      <ul class="dropdown-menu dropdown-menu-right">
                         <li>
-                           <a id="lnkUserPrefChangePwd" href="#" data-toggle="modal" data-target="#demo">Change
+                           <a id="lnkUserPrefChangePwd" href="changepassword.html">Change
                               Password</a>
                         </li>
                         <li>
