--- a/tutorialdomain.html
+++ b/tutorialdomain.html
@@ -385,7 +385,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li>
-                                    <a id="lnkUserPrefChangePwd" href="#" data-toggle="modal" data-target="#demo">Change Password</a>
+                                    <a id="lnkUserPrefChangePwd" href="changepassword.html">Change Password</a>
                                 </li>
                                 <li>
                                     <a id="lnkUserPrefChangeLang" href="changelanguage.html">Change Language</a>
