Add the rest of E-mail pages, change Readme
Add the rest of the missing pages (Email Accounts and Email Forwarders) and update the index files.
Update README's copyright year

--- a/formatted.index.html
+++ b/formatted.index.html
@@ -561,9 +561,9 @@
                            <!-- ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-file_manager"
-                                 class="itemImageWrapper integrations_icon spriteicon_img icon-file_manager" href="https://filemanager.ai/new/#/c/">
+                                 class="itemImageWrapper integrations_icon spriteicon_img icon-file_manager" href="https://filemanager.ai/new/#/c/" target="_blank">
                               </a>
-                              <a id="item_file_manager" class="itemTextWrapper link" href="https://filemanager.ai/new/#/c/">Online File Manager</a>
+                              <a id="item_file_manager" class="itemTextWrapper link" href="https://filemanager.ai/new/#/c/" target="_blank">Online File Manager</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
@@ -709,17 +709,17 @@
                            <!-- ngRepeat: item in ::group.items track by item.file -->
                            <!-- DISABLED
                                  <div class="item" role="page">
-                                    <a id="icon-accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-accounts" href="#" data-toggle="modal" data-target="#demo" target="">
+                                    <a id="icon-accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-accounts" href="emailaccounts.html">
                                     </a>
-                                    <a id="item_accounts" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Email Accounts</a>
+                                    <a id="item_accounts" class="itemTextWrapper link"  href="emailaccounts.html">Email Accounts</a>
                                  </div>
                                  -->
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <!-- DISABLED
                                  <div class="item" role="page">
-                                    <a id="icon-forwarders" class="itemImageWrapper integrations_icon spriteicon_img icon-forwarders" href="#" data-toggle="modal" data-target="#demo" target="">
+                                    <a id="icon-forwarders" class="itemImageWrapper integrations_icon spriteicon_img icon-forwarders" href="emailforwarders.html">
                                     </a>
-                                    <a id="item_forwarders" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Forwarders</a>
+                                    <a id="item_forwarders" class="itemTextWrapper link"  href="emailforwarders.html">Forwarders</a>
                                  </div>
                                  -->
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
@@ -740,9 +740,9 @@
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <!-- DISABLED
                                  <div class="item" role="page" style="display: none;">
-                                    <a id="icon-email_filters" class="itemImageWrapper integrations_icon spriteicon_img icon-email_filters" href="#" data-toggle="modal" data-target="#demo" target="">
+                                    <a id="icon-email_filters" class="itemImageWrapper integrations_icon spriteicon_img icon-email_filters" href="http://185.27.134.244/roundcubemail/" target="_blank">
                                     </a>
-                                    <a id="item_email_filters" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="_blank">Webmail</a>
+                                    <a id="item_email_filters" class="itemTextWrapper link"  href="http://185.27.134.244/roundcubemail/" target="_blank">Webmail</a>
                                  </div>
                                  -->
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
