--- a/ourCDN.html
+++ b/ourCDN.html
@@ -207,9 +207,9 @@
                            <div id="files-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-file_manager" class="itemImageWrapper integrations_icon spriteicon_img icon-file_manager" href="https://filemanager.ai/new/#/c/">
+                                 <a id="icon-file_manager" class="itemImageWrapper integrations_icon spriteicon_img icon-file_manager" href="https://filemanager.ai/new/#/c/" target="_blank">
                                  </a>
-                                 <a id="item_file_manager" class="itemTextWrapper link"  href="https://filemanager.ai/new/#/c/">Online File Manager</a>
+                                 <a id="item_file_manager" class="itemTextWrapper link"  href="https://filemanager.ai/new/#/c/" target="_blank">Online File Manager</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -331,17 +331,17 @@
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <!-- DISABLED
                                  <div class="item" role="page">
-                                    <a id="icon-accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-accounts" href="#" data-toggle="modal" data-target="#demo" target="">
+                                    <a id="icon-accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-accounts" href="emailaccounts.html">
                                     </a>
-                                    <a id="item_accounts" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Email Accounts</a>
+                                    <a id="item_accounts" class="itemTextWrapper link"  href="emailaccounts.html">Email Accounts</a>
                                  </div>
                                  -->
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <!-- DISABLED
                                  <div class="item" role="page">
-                                    <a id="icon-forwarders" class="itemImageWrapper integrations_icon spriteicon_img icon-forwarders" href="#" data-toggle="modal" data-target="#demo" target="">
+                                    <a id="icon-forwarders" class="itemImageWrapper integrations_icon spriteicon_img icon-forwarders" href="emailforwarders.html"
                                     </a>
-                                    <a id="item_forwarders" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Forwarders</a>
+                                    <a id="item_forwarders" class="itemTextWrapper link"  href="emailforwarders.html">Forwarders</a>
                                  </div>
                                  -->
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
