--- a/jsdelivr.html
+++ b/jsdelivr.html
@@ -462,14 +462,12 @@
                                  <a id="item_multiphp_configuration" class="itemTextWrapper link"  href="phpconfig.html">Alter PHP Config</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
-                              <!-- DISABLED
                               <div class="item" role="page">
-                                 <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="phpselectversion.html">
                                  </a>
-                                 <a id="item_lvephpsel" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Select PHP Version</a>
+                                 <a id="item_lvephpsel" class="itemTextWrapper link"  href="phpselectversion.html">Select PHP Version</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
-                           -->
                            </div>
                         </div>
                         <div drop-area="" drop="handleDrop" id="software-drop-area" class="drop-area"></div>
